objects/MDPERSONATOR__MD_customMappings__c.object
<CustomObject>
    <description>An object that stores the application custom maps.</description>
    <fields>
        <fullName>MDPERSONATOR__inputMap__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>inputMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__objectType__c</fullName>
        <label>objectType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__outputMap__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>outputMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>MD_customMappings</label>
    <nameField>
        <label>MD_customMappings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_customMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>